--- a/more.html
+++ b/more.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Friends - Kokoa Clone</title>
+    <title>More - Kokoa Clone</title>
     <script src="https://kit.fontawesome.com/ee4b9dab95.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="nav-bar.css">
 </head>
@@ -26,52 +26,59 @@
     </div>
 
     <header class="screen-header">
-        <h1 class="screen-header__title">Friends</h1>
+        <h1 class="screen-header__title">More</h1>
         <div class="screen-header__icons">
-        <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
-        <span><i class="fa-solid fa-music fa-lg"></i></span>
-        <span><i class="fa-solid fa-gear fa-lg"></i></span>
-    </div>
+            <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
+            <span><i class="fas fa-music fa-lg"></i></span>
+            <span><a href="settings.html"><i class="fa-solid fa-gear fa-lg"></i></a></span>
+        </div>
     </header>
 
-    <a id="friends-display-link">
-        <i class="fa-solid fa-circle-info"></i>Friends' Names Dispaly
-        <i class="fa-solid fa-chevron-right fa-xs"></i>
-    </a>
-
-    <main class="friends-screen">
+    <main class="main-screen more-screen">      
         <div class="user-component">
             <div class="user-component__column">
                 <img src="사본 -주재영 010-2125-1013.jpg" class="user-component__avatar user-component__avatar--xl">
                 <div class="user-component__text">
                     <h4 class="user-component__title">주재영</h4>
-                    <!--<h6 class="user-component__subtitle">this text whatever</h6>-->
+                    <h6 class="user-component__subtitle">08+ 1234 5678</h6>
                 </div>
             </div>
-            <div class="user-component__column"></div>
+            <div class="user-component__column">
+                <i class="far fa-comment-alt fa-2x"></i>
+            </div>
         </div>
-        <div class="friends-screen__channel">
-            <div class="friends-creen__channel-header">
-                <span>Channel</span>
-                <i class="fa-solid fa-chevron-up fa-xs"></i>
+        <div class="icon-row">
+            <div class="icon-row__icon">
+                <i class="far fa-calendar"></i>
+                <span>Calendar</span></div>
+            <div class="icon-row__icon">
+                <i class="far fa-smile-beam"></i>
+                <span>Emoticons</span></div>
+            <div class="icon-row__icon">
+                <i class="fas fa-paint-roller"></i>
+                <span>Themes</span></div>
+            <div class="icon-row__icon">
+                <i class="fas fa-file-invoice-dollar"></i>
+                <span>Account</span>
             </div>
-            <div class="user-component">
-                <div class="user-component__column">
-                    <img 
-                    src="사본 -주재영 010-2125-1013.jpg" 
-                    class="user-component__avatar user-component__avatar--sm" 
-                    />
-                    <div class="user-component__text">
-                        <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
+        </div>  
+        <div class="more-suggestions">
+            <h4 class="more-suggestions__title">Suggestions</h4>
+            <div class="more-suggestions__icons">
+                <div class="more-suggestions__icon">
+                    <div class="more-suggestions__icon-image">
+                        <i class="fas fa-quote-right"></i>
                     </div>
+                    <span class="more-suggestions__icon-text">Kokoa Story</span>
                 </div>
-                <div class="user-component__column">
-                    <div>
-                        <span>2</span>
-                        <i class="fa-solid fa-chevron-right fa-xs"></i>
+                <div class="more-suggestions__icon">
+                    <div class="more-suggestions__icon-image">
+                        <i class="fas fa-quote-right"></i>
                     </div>
+                    <span class="more-suggestions__icon-text">Kokoa Story</span>
                 </div>
             </div>
+        </div>
     </main>
 
 
@@ -79,23 +86,23 @@
         <ul class="nav__list">
             <li class="nav__btn">
                 <a class="nav__link" href="friends.html">
-                    <i class="fa-solid fa-user fa-2x"></i>
+                    <i class="far fa-user fa-2x"></i>
                 </a>
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="chat.html">
                     <span class="nav__notification badge">1</span>
-                    <i class="fa-regular fa-comment fa-2x"></i>
+                    <i class="far fa-comment fa-2x"></i>
                 </a>
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="find.html">
-                    <i class="fa fa-search fa-2x"></i>
+                    <i class="fas fa-search fa-2x"></i>
                 </a>
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="more.html">
-                    <i class="fa-solid fa-ellipsis fa-2x"></i>
+                    <i class="fas fa-ellipsis fa-2x"></i>
                 </a>
             </li>
         </ul>
